--- a/visitseattle.ipynb
+++ b/visitseattle.ipynb
@@ -197,8 +197,6 @@
     "        writer.writerow([name, date, location, event_type, region])\n",
     "print"
    ]
-<<<<<<< HEAD
-=======
   },
   {
    "cell_type": "markdown",
@@ -364,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +623,7 @@
        "    'detailedForecast': 'A slight chance of rain. Mostly cloudy, with a high near 40. Chance of precipitation is 20%.'}]}}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,8 +636,68 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Location：OpenStreeetMap Geocoding API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
->>>>>>> 6923b7e (api)
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'place_id': 312844859,\n",
+       "  'licence': 'Data © OpenStreetMap contributors, ODbL 1.0. http://osm.org/copyright',\n",
+       "  'osm_type': 'node',\n",
+       "  'osm_id': 150973716,\n",
+       "  'lat': '47.6594631',\n",
+       "  'lon': '-122.3343417',\n",
+       "  'category': 'place',\n",
+       "  'type': 'suburb',\n",
+       "  'place_rank': 19,\n",
+       "  'importance': 0.3131791431958073,\n",
+       "  'addresstype': 'suburb',\n",
+       "  'name': 'Wallingford',\n",
+       "  'display_name': 'Wallingford, Seattle, King County, Washington, 98015, United States',\n",
+       "  'boundingbox': ['47.6394631', '47.6794631', '-122.3543417', '-122.3143417']}]"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# location name to lat lon\n",
+    "\n",
+    "# Option 1: just string manipulation\n",
+    "base_url = \"https://nominatim.openstreetmap.org/search.php\"\n",
+    "query_params_str = \"?q=Wallingford%2C+Seattle&format=jsonv2\"\n",
+    "ful_url = base_url + query_params_str\n",
+    "# Option 2: use dictionary to represent query params\n",
+    "#           use requests.get(url, params=query_params) to attach the query param dict\n",
+    "query_params = {\n",
+    "    \"q\": \"Wallingford, Seattle\",\n",
+    "    \"format\": \"jsonv2\"\n",
+    "}\n",
+    "\n",
+    "res = requests.get(base_url, params=query_params)\n",
+    "res.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
